<resources>
    <string name="app_name">BETTER</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_addnote">New+</string>
    <string name="nameHint">input name</string>
    <string name="passwordHint">input password</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Welcome back</string>
    <string name="title_activity_home_first">我的工具箱</string>
    <string name="tab1">主页</string>
    <string name="tab2">常用</string>
    <string name="tab3">更多</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank fragment1</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_position">MyPositionActivity</string>
    <string name="title_activity_my_note">MyNoteActivity</string>
    <string name="title_activity_new_day_item">NewDayItemActivity</string>
    <string name="newNoteTitle1">日期</string>
    <string name="newNoteTitle2">有啥标题</string>
    <string name="newNoteTitle3">今天发生了啥:</string>
</resources>
