<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.baofeng.hero.myapplication.com.baofeng.view.NewDayItemActivity">

    <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
        <Button
            android:id="@id/cancelBtn"
            android:text="@string/cancel"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"/>
        <Button
            android:id="@id/okButton"
            android:text="@string/ok"
            android:layout_toRightOf="@id/cancelBtn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <!--          1           -->
       <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="50dp">
         <TextView android:id="@+id/title1"
                   android:textSize="25dp"
                   android:text="@string/newNoteTitle1"
                   android:layout_width="60dp"
                   android:layout_height="40dp" />
         <Button
            android:layout_toRightOf="@+id/title1"
            android:hint="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </RelativeLayout>
        <!--         2          -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">
            <TextView android:id="@+id/title2"
                android:textSize="20dp"
                android:text="@string/newNoteTitle2"
                android:layout_width="100dp"
                android:layout_height="40dp" />
            <EditText
                android:layout_toRightOf="@+id/title2"
                android:hint="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <!--          3           -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:id="@+id/title3"
                android:textSize="20dp"
                android:text="@string/newNoteTitle3"
                android:layout_width="140dp"
                android:layout_height="40dp" />
            <EditText
                android:layout_below="@id/title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

               android:scrollbars="vertical"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
