<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.baofeng.hero.myapplication.com.baofeng.view.HomeFirstActivity">
   <FrameLayout
       android:id="@+id/mainView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_above="@+id/buttonPanel"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/linen"
        android:id="@+id/buttonPanel"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab1"
            android:background="@color/linen"
            android:id="@+id/tab1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab2"
            android:background="@color/linen"
            android:id="@+id/tab2"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab3"
            android:background="@color/linen"
            android:id="@+id/tab3"/>
    </LinearLayout>

</RelativeLayout>
